// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  <div
    action={null}
    aria-describedby={null}
    aria-labelledby={null}
    className="Modal__ModalContainer-sc-15cll21-2 iafgvV"
    id={null}
    pointerEvents="auto"
  >
    <div
      action={null}
      className="Modal__ModalBG-sc-15cll21-3 gtDVkZ"
      onClick={[Function]}
    />
    <span
      className="Modal__ContentWrapper-sc-15cll21-0 liMSYL"
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 lkFwtr Banner__StyledBanner-sc-6825al-0 bfAGjz"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 bRGQtj"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo"
              id={null}
              rows={null}
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 KxMwb"
                fontSize="1.15em"
                fontWeight={400}
                letterSpacing="0px"
              >
                This is a Standard notification telling you stuff.
              </h5>
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 kzNrBw"
              disabled={null}
              href={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 bpsbMF Banner__Close-sc-6825al-1 cgOoTm"
                color={null}
                data-icon="times"
                data-prefix="far"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </span>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Default Modal
      </label>
    </section>
  </button>,
]
`;

exports[` 2`] = `
Array [
  <div
    action={null}
    aria-describedby={null}
    aria-labelledby={null}
    className="Modal__ModalContainer-sc-15cll21-2 iafgvV"
    id={null}
    pointerEvents="auto"
  >
    <div
      action={null}
      className="Modal__ModalBG-sc-15cll21-3 gtDVkZ"
      onClick={[Function]}
    />
    <span
      className="Modal__ContentWrapper-sc-15cll21-0 liMSYL"
      onClick={null}
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 cEBIcs"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 bRGQtj"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dIbntl"
                fontSize="0.876em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                This is a very special message just for you...
              </p>
            </div>
          </div>
        </section>
      </div>
    </span>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Open Modal
      </label>
    </section>
  </button>,
]
`;

exports[` 3`] = `
Array [
  <div
    action={null}
    aria-describedby={null}
    aria-labelledby={null}
    className="Modal__ModalContainer-sc-15cll21-2 iafgvV"
    id={null}
    pointerEvents="auto"
  >
    <div
      action={null}
      className="Modal__ModalBG-sc-15cll21-3 gtDVkZ"
      onClick={[Function]}
    />
    <span
      className="Modal__ContentWrapper-sc-15cll21-0 liMSYL"
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 gzxUAm DialogBox__DialogCard-iv0dnf-1 eLwRLb"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 bRGQtj"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 bKCMpV"
                fontSize="1.15em"
                fontWeight={600}
                letterSpacing="0px"
              >
                Default Dialog
              </h5>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
          id={null}
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 eaKoCk"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 kiIKlP DialogBox__ButtonGrid-iv0dnf-0 cUZJkB"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 XXdV DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
              disabled={false}
              htmlFor={null}
              id="Cancel"
              name="Cancel"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
                  fontSize="1em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Nevermind...
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 mWjML DialogBox__SecondaryButton-iv0dnf-4 RChLi"
              disabled={false}
              htmlFor={null}
              id="Confirm"
              name="Confirm"
              onClick={[Function]}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
                  fontSize="1em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Let's Do It!
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </span>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Dialog Modal
      </label>
    </section>
  </button>,
]
`;

exports[` 4`] = `
Array [
  <div
    action={null}
    aria-describedby={null}
    aria-labelledby={null}
    className="Modal__ModalContainer-sc-15cll21-2 enBxPE"
    id={null}
    pointerEvents="auto"
  >
    <div
      action={null}
      className="Modal__ModalBG-sc-15cll21-3 gtDVkZ"
      onClick={[Function]}
    />
    <span
      className="Modal__ContentWrapper-sc-15cll21-0 liMSYL"
      onClick={null}
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 cEBIcs"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 bRGQtj"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 dIbntl"
                fontSize="0.876em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                This is a very special message just for you...
              </p>
            </div>
          </div>
        </section>
      </div>
    </span>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Text Modal
      </label>
    </section>
  </button>,
]
`;

exports[` 5`] = `
Array [
  <div
    action={null}
    aria-describedby={null}
    aria-labelledby={null}
    className="Modal__ModalContainer-sc-15cll21-2 iafgvV"
    id={null}
    pointerEvents="auto"
  >
    <div
      action={null}
      className="Modal__ModalBG-sc-15cll21-3 gtDVkZ"
      onClick={[Function]}
    />
    <img
      className="Modal__Image-sc-15cll21-1 LeaMT"
      onClick={[Function]}
      src={Object {}}
    />
    <section
      className="Modal__Close-sc-15cll21-4 mQDax"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 eXDzps"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Image Modal
      </label>
    </section>
  </button>,
]
`;
